增加字段类型长度设置

--- a/src/Stellvia.Web/appsettings.json
+++ b/src/Stellvia.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Data": {
+    "Connection": "Data Source=stellvie.db"
+    //"Connection": "Data Source=106.55.249.137;Initial Catalog=Dev.XYCP;Persist Security Info=True;User ID=sa;Password=sql1.1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
