--- a/src/Stellvia.Web/Stellvia.Web.csproj
+++ b/src/Stellvia.Web/Stellvia.Web.csproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Stellvia.Admin.Web\Stellvia.Admin.Web.csproj" />
+    <ProjectReference Include="..\Stellvia.Data\Stellvia.Data.csproj" />
   </ItemGroup>
 
 </Project>
